--- a/src/Form/RegistrationBundle/Resources/config/doctrine/Users.orm.yml
+++ b/src/Form/RegistrationBundle/Resources/config/doctrine/Users.orm.yml
@@ -21,7 +21,7 @@ Form\RegistrationBundle\Entity\Users:
 
 
     manyToOne:
-        role:
+        roles:
             targetEntity: Roles
             inversedBy: users
             joinColumn:
