--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -22,7 +22,7 @@ framework:
     templating:
         engines: ['twig']
         #assets_version: SomeVersionScheme
-    default_locale:  en
+    default_locale:  ru
     trusted_hosts:   ~
     trusted_proxies: ~
     session:
