--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
+        "google/recaptcha": "~1.1"
 
-        "excelwebzone/recaptcha-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
