--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -35,6 +35,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+        captcha_public_key: "%captcha_public_key%"
 
 # Assetic Configuration
 assetic:
@@ -79,9 +81,6 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
-
-ewz_recaptcha:
-    public_key:  6Lchiw0TAAAAAOowjNpfF8mGB2cgj_j3DsFOgVXk
-    private_key: 6Lchiw0TAAAAACBU5nkoKl1web9_u0vYcZ0h_9Sy
-    locale_key:  %kernel.default_locale%
-    ajax: true
+form_registration:
+    captcha_public: "%captcha_public_key%"
+    captcha_private: "%captcha_private_key%"
