--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,3 +17,6 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    captcha_public_key: "6Lchiw0TAAAAAOowjNpfF8mGB2cgj_j3DsFOgVXk"
+    captcha_private_key: "6Lchiw0TAAAAACBU5nkoKl1web9_u0vYcZ0h_9Sy"
